# variance

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
app/: .gitignore  .prettierignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
app/e2e/: admin-succession.spec.ts  api-interactions.spec.ts  app.spec.ts  fixtures.ts  messaging.spec.ts  navigation.spec.ts  onboarding.spec.ts  tauri-mock.js  ui-interactions.spec.ts  unlock.spec.ts  websocket.spec.ts
app/scripts/: dev-two-instances.sh
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
app/src/api/: client.ts  types.ts  websocket.ts
app/src/api/__tests__/: client.test.ts  websocket.test.ts
app/src/components/conversations/: ChangeUsernameDialog.tsx  ConversationItem.tsx  ConversationList.tsx  CreateGroupModal.tsx  GroupConversationItem.tsx  InvitationsSection.tsx  NewConversationModal.tsx  SettingsModal.tsx  ShareContactModal.tsx
app/src/components/messages/: DateDivider.tsx  EmojiBar.tsx  GroupHeader.tsx  GroupMessageBubble.tsx  GroupView.tsx  ManageGroupPanel.tsx  MessageBubble.tsx  MessageComposerShell.tsx  MessageEditor.tsx  MessageInput.tsx  MessageView.tsx  TypingIndicator.tsx
app/src/components/messages/__tests__/: groupMessageFiltering.test.ts
app/src/components/onboarding/: GenerateStep.tsx  MnemonicDisplay.tsx  OnboardingShell.tsx  PassphraseStep.tsx  RecoverStep.tsx  SetupComplete.tsx  UnlockScreen.tsx  UsernameStep.tsx  WelcomeStep.tsx
app/src/components/settings/: AccountSection.tsx  AppearanceSection.tsx  NetworkSection.tsx  SettingsPage.tsx  StorageSection.tsx
app/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Checkbox.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Dialog.tsx  IconButton.tsx  Input.tsx  ScrollArea.tsx  Select.tsx  StatusIndicator.tsx  ThemeToggle.tsx  Toast.tsx  Toaster.tsx  Tooltip.tsx
app/src/hooks/: useDisplayName.ts  useNodeReady.ts  usePeerIdentity.ts  usePresencePolling.ts  useTheme.ts  useWebSocket.ts
app/src/hooks/__tests__/: useDisplayName.test.ts
app/src/stores/: appStore.ts  identityStore.ts  messagingStore.ts  settingsStore.ts  toastStore.ts
app/src/stores/__tests__/: appStore.test.ts  identityStore.test.ts  messagingStore.test.ts  settingsStore.test.ts  toastStore.test.ts
app/src/utils/: time.ts
crates/variance-app/: Cargo.toml
crates/variance-app/src/: api.rs  config.rs  error.rs  event_router.rs  identity_crypto.rs  identity_gen.rs  lib.rs  node.rs  state.rs  websocket.rs
crates/variance-app/src/api/: calls.rs  config.rs  conversations.rs  groups.rs  helpers.rs  identity.rs  invitations.rs  mod.rs  rate_limit.rs  social.rs  types.rs
crates/variance-app/src/event_router/: media.rs  messaging.rs  mod.rs  social.rs
crates/variance-app/tests/: api_lifecycle.rs
crates/variance-cli/: Cargo.toml
crates/variance-cli/src/: main.rs
crates/variance-identity/: Cargo.toml
crates/variance-identity/src/: cache.rs  config.rs  did.rs  error.rs  lib.rs  mailbox.rs  protocol.rs  storage.rs  username.rs
crates/variance-media/: Cargo.toml
crates/variance-media/src/: call.rs  config.rs  error.rs  lib.rs  protocol.rs  signaling.rs
crates/variance-messaging/: Cargo.toml
crates/variance-messaging/src/: direct.rs  error.rs  group.rs  lib.rs  mls.rs  offline.rs  protocol.rs  receipts.rs  storage.rs  typing.rs
crates/variance-messaging/src/storage/: direct.rs  group.rs  invitations.rs  mod.rs  offline.rs  peer.rs  receipts.rs  trait_def.rs
crates/variance-p2p/: Cargo.toml
crates/variance-p2p/src/: behaviour.rs  commands.rs  config.rs  error.rs  events.rs  lib.rs  node.rs  peer_store.rs  protocols.rs  rate_limiter.rs
crates/variance-p2p/src/handlers/: identity.rs  mod.rs  offline.rs  signaling.rs
crates/variance-p2p/src/node/: event_handlers.rs  mod.rs
crates/variance-p2p/src/protocols/: identity.rs  media.rs  messaging.rs
crates/variance-p2p/tests/: cross_crate_tests.rs  integration_tests.rs  two_node_tests.rs
crates/variance-proto/: Cargo.toml  build.rs
crates/variance-proto/proto/: identity.proto  media.proto  messaging.proto
crates/variance-proto/src/: lib.rs
crates/variance-relay/: Cargo.toml
crates/variance-relay/src/: main.rs
docs/: ARCHITECTURE-CORRECTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CLI-USAGE.md  GROUP-UX-PLAN.md  MLS-OPPORTUNITY.md  NAT-TRAVERSAL.md  PHILOSOPHY.md  PROTOCOL-GUIDE.md  QUICK-REFERENCE.md  README.md
docs/blog/: BETA.md
docs/tradeoffs/: local-storage.md
scripts/: pre-push-lint.sh
