[workspace]
resolver = "2"
members = [
    "crates/variance-proto",
    "crates/variance-p2p",
    "crates/variance-identity",
    "crates/variance-messaging",
    "crates/variance-media",
    "crates/variance-app",
    "crates/variance-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SeedyROM/variance"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1.16"
async-trait = "0.1"

# libp2p ecosystem
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "ping",
    "request-response",
    "macros",
    "metrics",
] }
libp2p-identity = { version = "0.2", features = ["ed25519", "secp256k1"] }

# HTTP server
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
snafu = { version = "0.8", features = ["backtrace"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Storage
sled = "0.34"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.9"
futures = "0.3"
dashmap = "6.1"
