[workspace]
resolver = "2"
members = [
    "crates/variance-proto",
    "crates/variance-p2p",
    "crates/variance-identity",
    "crates/variance-messaging",
    "crates/variance-media",
    "crates/variance-app",
    "crates/variance-cli",
    "crates/variance-relay",

    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/SeedyROM/variance"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1.16"
async-trait = "0.1"

# libp2p ecosystem
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "request-response",
    "macros",
    "metrics",
] }
clap = { version = "4.5", features = ["derive"] }
libp2p-identity = { version = "0.2", features = ["ed25519", "secp256k1"] }

# HTTP server
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
snafu = { version = "0.8", features = ["backtrace"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
bip39 = "2.1"

# Storage
# TODO: migrate from sled (unmaintained) to fjall when stabilizing
# https://github.com/fjall-rs/fjall
sled = "0.34"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.9"
futures = "0.3"
dashmap = "6.1"
chrono = "0.4"
ulid = "1.1"
tempfile = "3.14"
dirs = "5.0"

# --- Build Profiles ---

# Dev: fast compiles, minimal disk usage, backtraces still have line numbers
[profile.dev]
incremental = true
opt-level = 0
debug = "line-tables-only"   # Was `true` (level 2). ~10x smaller debug info, still gives file:line in backtraces.
strip = "none"

# Dependencies get slight optimization (makes dev runtime faster, especially libp2p/tokio)
[profile.dev.package."*"]
opt-level = 1
debug = false

# Profiling/benchmarking: release speed + debug symbols for perf/instruments
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# Release: full optimization, stripped
[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"
codegen-units = 1
