[package]
name = "variance-desktop"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "variance_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
dirs = "6.0.0"
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
variance-app = { path = "../../crates/variance-app" }
variance-p2p = { path = "../../crates/variance-p2p" }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-decorum = "1"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dev-dependencies]
tempfile = "3.26.0"
