[package]
name = "variance-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }
variance-p2p = { path = "../variance-p2p" }
variance-identity = { path = "../variance-identity" }
variance-messaging = { path = "../variance-messaging" }
variance-media = { path = "../variance-media" }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# Error handling
anyhow = { workspace = true }
snafu = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
toml = "0.9.8"

# Crypto
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
bip39 = { workspace = true }
vodozemac = "0.9"
argon2 = "0.5"
aes-gcm = "0.10"

# Paths
dirs = { workspace = true }

# Time
chrono = { workspace = true }

# WebSocket & identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }
ulid = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
