[package]
name = "variance-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-utils = ["dep:tempfile"]

[dependencies]
variance-proto = { path = "../variance-proto" }
variance-p2p = { path = "../variance-p2p" }
variance-identity = { path = "../variance-identity" }
variance-messaging = { path = "../variance-messaging" }
variance-media = { path = "../variance-media" }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# Error handling
anyhow = { workspace = true }
snafu = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
toml = "0.9.8"

# P2P identity (for PeerId parsing)
libp2p-identity = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
bip39 = { workspace = true }
vodozemac = "0.9"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = "1"
base64 = "0.22"

# Paths
dirs = { workspace = true }

# Time
chrono = { workspace = true }

# WebSocket & identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }
ulid = { workspace = true }
dashmap = { workspace = true }

# Optional: only used in test-utils feature and unit tests
tempfile = { version = "3.15", optional = true }

[dev-dependencies]
tempfile = "3.15"
libp2p-identity = { workspace = true }
tower = { workspace = true }

[[test]]
name = "api_lifecycle"
required-features = ["test-utils"]
