[package]
name = "variance-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "variance"
path = "src/main.rs"

[dependencies]
variance-app = { path = "../variance-app" }
variance-proto = { path = "../variance-proto" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
