[package]
name = "variance-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "variance"
path = "src/main.rs"

[dependencies]
variance-app = { path = "../variance-app" }
variance-p2p = { path = "../variance-p2p" }
variance-proto = { path = "../variance-proto" }

# CLI
clap = { workspace = true, features = ["env"] }

# HTTP server
axum = { workspace = true }

# Async
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bip39 = { workspace = true }

# Serialization
serde_json = { workspace = true }
hex = { workspace = true }

# Time
chrono = { workspace = true }
