[package]
name = "variance-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }

# libp2p
libp2p = { workspace = true }
libp2p-identity = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
snafu = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Storage
sled = { workspace = true }

# IPFS
ipfs-api-backend-hyper = { version = "0.6", default-features = false, features = ["with-builder", "with-send-sync"] }
cid = "0.11"

# Concurrency
dashmap = { workspace = true }

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
