[package]
name = "variance-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }
variance-p2p = { path = "../variance-p2p" }

# libp2p
libp2p = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
prost = { workspace = true }
serde = { workspace = true }

# Error handling
snafu = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto (for signatures)
ed25519-dalek = { workspace = true }

# Concurrent state
dashmap = { workspace = true }

# ULID for call IDs
ulid = "1.1"

# Time
chrono = "0.4"

[dev-dependencies]
rand = { workspace = true }
