[package]
name = "variance-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }
variance-identity = { path = "../variance-identity" }

# libp2p
libp2p = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

# Serialization
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Error handling
snafu = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto (for Double Ratchet via Olm)
ed25519-dalek = { workspace = true }
rand = { workspace = true }
vodozemac = "0.9"

# Crypto (for Group messaging)
aes-gcm = "0.10"

# Storage
sled = { workspace = true }

# ULID for message IDs
ulid = "1.1"

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
