[package]
name = "variance-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }
variance-identity = { path = "../variance-identity" }

# libp2p
libp2p = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

# Serialization
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Error handling
snafu = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto (for Double Ratchet via Olm)
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
vodozemac = "0.9"

# Crypto (for Group messaging — legacy AES-GCM, being replaced by MLS)
aes-gcm = "0.10"

# MLS (RFC 9420) group encryption
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits = "0.5"

# Crypto (for at-rest plaintext encryption)
hkdf = { workspace = true }
sha2 = { workspace = true }

# Storage
sled = { workspace = true }

# ULID for message IDs
ulid = "1.1"

# Hex encoding for MLS state snapshots
hex = { workspace = true }

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
