[package]
name = "variance-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }

# libp2p
libp2p = { workspace = true }
libp2p-identity = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
snafu = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }

# Storage
sled = { workspace = true }
