[package]
name = "variance-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
variance-proto = { path = "../variance-proto" }
variance-identity = { path = "../variance-identity" }
variance-messaging = { path = "../variance-messaging" }
variance-media = { path = "../variance-media" }

# libp2p
libp2p = { workspace = true }
libp2p-identity = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Error handling
snafu = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand_core = { workspace = true }

# Storage
sled = { workspace = true }

# Utils
dirs = { workspace = true }

# Time
chrono = { workspace = true }

# IDs
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
vodozemac = "0.9"
chrono = { workspace = true }
